# file-desk-organizer

./: .gitignore  LICENCE.md  README.md  RELEASE.md  SECURITY.md  file-organizer.html  index.html  package-lock.json  package.json
docs/superpowers/specs/: 2025-07-15-ai-companion-design.md  2026-07-18-ui-modernization-design.md
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
