[package]
name = "deskmatee"
version = "1.0.0"
description = "Smart file organizer desktop app"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
qrcode = "0.14"
base64 = "0.22"
rand = "0.8"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
dunce = "1"

